# youtube-summarizer

./: .gitignore  LICENSE  README.md  app.py  fetch.py  main.py  pyproject.toml  settings.example.json  settings.py  summary.py  ui.py  util.py
src/youtube_summarizer/: __init__.py  app.py  fetch.py  settings.py  summary.py  ui.py  util.py
tests/: test_summary.py
