[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "CLI tool that summarizes YouTube videos from a link"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "platformdirs>=4.10.0",
    "pydantic-settings>=2.14.1",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "youtube-transcript-api>=1.2.4",
]

[project.scripts]
yt-summarize = "youtube_summarizer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
